force-app/main/default/objects/FullContact_Login__mdt/FullContact_Login__mdt.object-meta.xml
<CustomObject>
    <description>Holds api end point and api key for FullContact</description>
    <label>FullContact Login</label>
    <pluralLabel>FullContact Logins</pluralLabel>
</CustomObject>