force-app/main/default/objects/FullContact_Login__mdt/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <description>Comma separated email addresses of the people who should receive status of a Full Contact scheduled job.</description>
    <label>Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>